# adventofcode2024

./: .gitignore  pyproject.toml
day_01/: answer.py  puzzle_text_day_01.md
day_02/: answer.py  puzzle_text_day_02.md
day_03/: answer.py  puzzle_text_day_03.md
day_04/: answer.py  puzzle_text_day_04.md
day_05/: answer.py  answer_day_05.py  puzzle_text_day_05.md
day_06/: answer.py  puzzle_text_day_06.md
day_07/: answer.py  puzzle_text_day_07.md
day_08/: answer.py  puzzle_text_day_08.md
day_09/: answer.py  puzzle_text_day_09.md
day_10/: answer.py  puzzle_text_day_10.md
day_11/: answer.py  puzzle_text_day_11.md
day_12/: answer.py  puzzle_text_day_12.md
scripts/: create_folders.py  save_todays_puzzle_data.py  utilities.py
