[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Jonathan Bowden <bowden.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
